test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_decl_and_use_self_reference.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[0]: 
            CS: 
              CCompound: 
                CB: 
                  List[1]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: ptr
                          None: 
                          Pointer: 
                            Structure: 
                              TIdentifier: s
                              Bool: 1
                          None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
